HelloUltraviolet/Fixtures/RejectedSource/Expressions/ClosureAndPipelineExpressionsDiagnostic/Source/Main.uv
//! Rejected expression specimen for closure and pipeline diagnostic coverage.

public procedure pipelineDiagnosticAcceptBool(value: bool) -> i32 {
    if value {
        return 1
    }
    return 0
}

public procedure closureAndPipelineExpressionsDiagnosticReference() -> i32 {
    return 1 => pipelineDiagnosticAcceptBool
}
